--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "dependencies": {
     "emotion": "^9.1.3",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "moment": "^2.22.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-emotion": "^9.1.3"
+    "react-emotion": "^9.1.3",
+    "react-test-renderer": "^16.3.2"
   },
   "devDependencies": {
     "react-scripts": "1.1.4"
