--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mic-test",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://amymccarthy.co/mic-test",
+  "homepage": "http://amymccarthy.co/mic",
   "dependencies": {
     "emotion": "^9.1.3",
     "enzyme": "^3.3.0",
