--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "mic-test",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://amymccarthy.co/mic",
   "dependencies": {
     "emotion": "^9.1.3",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "gh-pages": "^1.1.0",
     "moment": "^2.22.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
@@ -16,9 +18,10 @@
     "react-scripts": "1.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "REACT_APP_HOST=http://localhost:3000 react-scripts start",
+    "build": "REACT_APP_HOST=http://amymccarthy.co react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   }
 }
